--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Belajar membuat RestAPI CRUD MySQL",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "author": "Zeldianto EP",
+  "author": "Tim DTI Unand",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "http": "^0.0.1-security",
     "https": "^1.0.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22"
