--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "https": "^1.0.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22"
